social links target modified

--- a/portfolio.html
+++ b/portfolio.html
@@ -294,19 +294,19 @@
         <div class="row justify-content-center mt-5">
             <div class="col-12 col-md-10">
                 <div class="social-icons d-flex justify-content-center">
-                    <a href="https://github.com/sprasanth2k">
+                    <a href="https://github.com/sprasanth2k" target="blank">
                         <span>
                             <i class="fab fa-github fa-lg"></i>
                             <span class="social-icon-text d-none d-md-inline">&nbsp;github</span>
                         </span>
                     </a>
-                    <a href="https://www.instagram.com/__prasanth__senthil_kumar/">
+                    <a href="https://www.instagram.com/__prasanth__senthil_kumar/" target="blank">
                         <span>
                             <i class="fab fa-instagram fa-lg"></i>
                             <span class="social-icon-text d-none d-md-inline">&nbsp;instagram</span>
                         </span>
                     </a>
-                    <a href="https://www.linkedin.com/in/prasanth-s-a37842190/">
+                    <a href="https://www.linkedin.com/in/prasanth-s-a37842190/" target="blank">
                         <span>
                             <i class="fab fa-linkedin fa-lg"></i></i>
                             <span class="social-icon-text d-none d-md-inline">&nbsp;linkedin</span>  
