--- a/portfolio.html
+++ b/portfolio.html
@@ -234,7 +234,7 @@
         
         <div class="row mt-5 justify-content-center">
             <div class="col-12 col-md-5">
-                <a href="./public/2018503543_Resume.pdf" target="blank">
+                <a href="./public/Prasanth_Resume.pdf" target="blank">
                     <div class="myresume">My Resume</div>
                 </a>
             </div>
