--- a/portfolio.html
+++ b/portfolio.html
@@ -90,14 +90,14 @@
                 <div class="about-content">
                     <h4 class="bonjour">Bonjour !!!</h4>
                     <br>
-                    My name is Prasanth.I am currently a student pursuing Computer Science Engineering in MIT,Chennai.
+                    My name is Prasanth. I am currently a student pursuing Computer Science Engineering at MIT, Chennai.
                     <br><br>
-                    I did my schooling in SBIOA MHSS,Trichy. Before my college, I don't know anything about coding or web development as i took Bio-maths group in my HSC. During first year 
-                    of my college, I had much difficulty in understanding programming concepts. As days went by I started to grasp the concepts. And 
-                    now it became a part of my life. I love to code and learn new stuffs. I also love to design and develop webpages. I spend most 
-                    of my time in problem solving and web development. I love to work with web based frameworks and technologies. I have high 
-                    self confidence and i believe in myself the most. I am a quick learner and can learn new stuffs in short span of time. Rather 
-                    than techinal skills, I love listening to musics and playing games with my friends.
+                    I did my schooling in SBIOA MHSS, Trichy. Before my college, I don't know anything about coding or web development as I took Bio-maths group 
+                    in my HSC. During the first year of my college, I had much difficulty in understanding programming concepts. As days went by I started to 
+                    grasp the concepts. And now it became a part of my life. I love to code and learn new kinds of stuff. I also love to design and develop 
+                    web pages. I spend most of my time in problem-solving and web development. I love to work with web-based frameworks and technologies. I have 
+                    high self-confidence and I believe in myself the most. I am a quick learner and can learn new stuffs in a short span of time. Rather than 
+                    technical skills, I love listening to music and playing games with my friends.
                 </div>
             </div>
             <div class="col-12 offset-lg-1 col-lg-5">
