--- a/portfolio.html
+++ b/portfolio.html
@@ -328,8 +328,8 @@
         </div>
     </div>
 
-    <div class="scrolltotop">
-        <span class="scrolltotopicon" onclick="window.scrollTo(0,0)">
+    <div class="scrolltotop" onclick="window.scrollTo(0,0)">
+        <span class="scrolltotopicon">
             <i class="fas fa-long-arrow-alt-up"></i>
         </span>
     </div>
