--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
         <div class="row justify-content-center mt-4">
             <div class="col-11 col-md-8 text-center">
                 <div class="about-sentence">
-                    I am a self-motivated and hardworking 20 year old student with a ready mind to learn new skills and technology
+                    I am a self-motivated and hardworking 21 year old student with a ready mind to learn new skills and technology
                 </div>  
             </div>
         </div>
@@ -181,7 +181,7 @@
                     Computer Science Engineering
                 </div>
                 <div class="education-content mt-4">
-                    Currently pursuing 3rd year in department of Computer Technlogy, MIT, Chennai.
+                    Currently pursuing final year in department of Computer Technlogy, MIT, Chennai.
                 </div>
             </div>
         </div>
