--- a/portfolio.html
+++ b/portfolio.html
@@ -106,13 +106,13 @@
                     <div class="c-cpp">
                         C and C++
                         <div class="progress-bar mt-2">
-                            <div class="percent percent-90"></div>
+                            <div class="percent percent-85"></div>
                         </div>
                     </div>
                     <div class="java-python">
                         JAVA and PYTHON
                         <div class="progress-bar mt-2">
-                            <div class="percent percent-65"></div>
+                            <div class="percent percent-50"></div>
                         </div>
                     </div>
                     <div class="html">
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <div class="css-bootstrap">
-                        CSS and BOOTSTRAP
+                        CSS
                         <div class="progress-bar mt-2">
                             <div class="percent percent-80"></div>
                         </div>
@@ -136,14 +136,14 @@
                     <div class="reactjs">
                         REACT JS
                         <div class="progress-bar mt-2">
-                            <div class="percent percent-75"></div>
+                            <div class="percent percent-65"></div>
                         </div>
                     </div>
                     
                     <div class="mongodb-sql">
                         MongoDB and MYSQL
                         <div class="progress-bar mt-2">
-                            <div class="percent percent-70"></div>
+                            <div class="percent percent-60"></div>
                         </div>
                     </div>
                 </div>
