--- a/portfolio.html
+++ b/portfolio.html
@@ -141,7 +141,7 @@
                     </div>
                     
                     <div class="mongodb-sql">
-                        MongoDB and MYSQL
+                        MYSQL
                         <div class="progress-bar mt-2">
                             <div class="percent percent-60"></div>
                         </div>
