--- a/portfolio.html
+++ b/portfolio.html
@@ -96,8 +96,7 @@
                     in my HSC. During the first year of my college, I had much difficulty in understanding programming concepts. As days went by I started to 
                     grasp the concepts. And now it became a part of my life. I love to code and learn new kinds of stuff. I also love to design and develop 
                     web pages. I spend most of my time in problem-solving and web development. I love to work with web-based frameworks and technologies. I have 
-                    high self-confidence and I believe in myself the most. I am a quick learner and can learn new stuffs in a short span of time. Rather than 
-                    technical skills, I love listening to music and playing games with my friends.
+                    high self-confidence and I believe in myself the most. I am a quick learner and can learn new stuffs in a short span of time.
                 </div>
             </div>
             <div class="col-12 offset-lg-1 col-lg-5">
